--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ Bright blue: #677DB7
 Black coffee:  #322A26
 white #e0e2db
 */
+
 *{
     margin:0;
     padding:0;
@@ -18,6 +19,7 @@ nav ul{
     border-top: 6px solid #454B66;
     background-color: #322A26 ;
 }
+
  nav ul li a{
      text-decoration:none;
      display: block;
@@ -52,3 +54,64 @@ nav ul{
          flex-wrap: wrap;
      }
  }
+
+/*################# HOME STYLE ##########################*/
+#home{
+    min-height:90vh;
+    background-image: url(./images/oliur-8jSTB6NLmVQ-unsplash.jpg);
+    background-attachment:fixed;
+    background-position:center;
+    background-size:cover;
+    background-repeat: no-repeat;
+    display:flex;
+    justify-content: center;
+    align-items:center;
+}
+
+.info{
+      max-width: 80vw;
+      
+}
+
+.info p{
+    text-align: center;
+    font-size:30px;
+    font-style: italic;
+    color: rgb(255, 255, 255);
+    font-weight:900px;
+    background:#322A26;
+    opacity: 0.7;
+}
+
+.home-name{
+    font-size: 33px;
+    font-style: normal;
+}
+
+.info-underline{
+    border: 3px solid #454B66;
+    width:80%;
+    margin:10px auto 20px auto;
+}
+
+.resume-button{
+    display: flex;
+    justify-content: space-between;
+}
+
+.resume-button button{
+    font-size: 30px;
+    padding: 15px;
+    text-transform: uppercase;
+    margin: 0 10px;
+  
+    color: #e0e2db;
+    border: 4px solid #677DFF;
+    font-weight:bolder;
+    background:#322A26;
+}
+
+.resume-button button:hover{
+    color: #e0e2db;
+    background:#677DB7;
+}
