--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ Dark-blue: #454B66
 Bright blue: #677DB7
 Black coffee:  #322A26
 white #e0e2db
+cool white #e0e0e0
 */
 
 *{
@@ -80,7 +81,7 @@ nav ul{
     color: rgb(255, 255, 255);
     font-weight:900px;
     background:#322A26;
-    opacity: 0.7;
+    opacity: 0.5;
 }
 
 .home-name{
@@ -114,4 +115,80 @@ nav ul{
 .resume-button button:hover{
     color: #e0e2db;
     background:#677DB7;
+}
+/*##################Projects###########################*/
+#projects .project-text{
+    color:#677DB7;
+    text-align: center;
+    font-size:40px;
+    text-transform: uppercase;
+    font-style:italic;
+}
+.project-title{
+    margin:40px 0;
+}
+
+.project-underline{
+    border: 3px solid #454B66;
+    width:80%;
+    margin:0 auto;
+}
+
+#projects{
+    background-color: #e0e0e0;
+    padding:20px 0 80px 0;
+}
+
+.projects-container{
+    max-width: 90vw;
+    margin:0 auto;
+}
+
+#projects img{
+    width:50%;
+    height: 50vh;
+    min-height: 10%;
+    display: block;
+    margin: 0 auto;
+    transition: transform 4s;
+}
+
+.projects-project{
+position: relative;
+overflow:hidden;
+background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7));
+color: #e0e2db;
+}
+
+.img-text{
+    position:absolute;
+    top:50%;
+    left:40%;
+    transform: translate(-20%,-40%);
+    text-align: center;
+    opacity:0;
+    transition:opacity 4s;
+}
+
+.projects-project:hover img{
+    opacity: 0.5;
+    transform: scale(1.3);
+}
+
+.projects-project:hover .img-text{
+    opacity:1;
+}
+
+.project-sub-container{
+    background-color: rgb(104, 106, 117);
+    margin:20px 0;
+}
+
+.project-description{
+   padding:10px 5px 30px 5px;
+}
+
+.project-description p{
+    margin: 15px 0 25px 0;
+
 }
