--- a/style.css
+++ b/style.css
@@ -224,3 +224,29 @@ color: #e0e2db;
         column-gap: 1em;
     }
 }
+/*#################aboutpage#################*/
+#aboutme{
+background-color: rgb(70, 64, 61);
+padding:20px 0 80px 0;
+
+}
+
+.aboutme-title h1{
+text-align: center;
+font-size: 40px;
+font-style: italic;
+color: #e0e0e0;
+}
+
+.about-underline{
+    border: 2px solid #677DB7;
+    width:80%;
+    margin:0 auto 20px auto;
+}
+.aboutme-container{
+    max-width:90vw;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+
