--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ color: #e0e2db;
     }
 }
 
-/*#################aboutpage#################*/
+/*#######################aboutpage#####################################*/
 #aboutme{
 background-color: rgb(70, 64, 61);
 padding:40px 0 3px 0;
