--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ nav ul{
 
 /*################# HOME STYLE ##########################*/
 #home{
+    width: 100%;
     min-height:90vh;
     background-image: url(./images/oliur-8jSTB6NLmVQ-unsplash.jpg);
     background-attachment:fixed;
@@ -104,7 +105,7 @@ nav ul{
     font-size: 30px;
     padding: 15px;
     text-transform: uppercase;
-    margin: 0 0px;
+    margin: 0 10px;
   
     color: #e0e2db;
     border: 4px solid #677DFF;
