--- a/style.css
+++ b/style.css
@@ -313,3 +313,56 @@ padding: 2%;
         padding: 2%;
     }
 }
+
+footer{
+    background-color: #191716;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.footer-text{
+    text-transform: uppercase;
+    font-size:15px;
+    color: #e0e2db;
+    margin-bottom: 10px;
+}
+
+.footer-icons{
+    font-size: 30px;
+}
+
+.footer-icons .fab{
+    margin-right: 10px;
+    color: #e0e2db;
+    transition: transform 2s;
+}
+
+.footer-icons .fab:hover{
+    color: #677DB7;
+    transform: translateY(-15px);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
